fix html br in palestrina

--- a/products/palestrina/index.html
+++ b/products/palestrina/index.html
@@ -122,7 +122,7 @@ Tre modi per giocare: distesi sul tappeto per neonato a pancia in su o sul panci
 In modalità attivazione breve, il tappeto morbido per neonato risponde ai movimenti del bambino con musica e luci; in modalità attivazione prolungata, riproduce fino a 20 minuti di musica <br>
 Questo tappeto da cameretta per neonato include un tucano rimovibile da passeggio: basta premere l&rsquo;ala o scuoterlo delicatamente per attivare le melodie e le luci <br>
 Include 1 tappetino per bambini con palestrina, giocattoli e accessori <br>
-I giocattoli possono essere attaccati al tappeto gioco per neonato o alla giraffa per incoraggiare il bambino a sollevarsi sul pancino &lt;br
+I giocattoli possono essere attaccati al tappeto gioco per neonato o alla giraffa per incoraggiare il bambino a sollevarsi sul pancino <br>
 I giochi riposizionabili di questo tappeto palestrina per neonato includono: scimmietta soffice, specchietto, leoncino tintinnate, lumachina, zebra clac clac e molto altro <br></p>
 </div>
       </div>
