updated meta description in all items

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 
 
+
 </head>
 <body id="body">
 <!-- preloader start -->
@@ -89,7 +90,7 @@
 			<div class="col-md-6 align-self-center text-center text-md-left">
 				<div class="block">
 					<h1 class="font-weight-bold mb-4 font-size-60">Ciao, io sono Martino!</h1>
-					<p class="mb-4">Sono un piccolo Dughino, me lo fai un regalino?</p>
+					<p class="mb-4">Sono un piccolo Dughino, se vuoi farmi un regalino&hellip;</p>
 
 
 					<a href="https://martino.life/products" class="btn btn-main">Lista regali</a>
