home text in bold, update bugaboo, add home button howto

--- a/index.html
+++ b/index.html
@@ -90,14 +90,21 @@
 			<div class="col-md-6 align-self-center text-center text-md-left">
 				<div class="block">
 					<h1 class="font-weight-bold mb-4 font-size-60">Ciao, io sono Martino!</h1>
-					<p class="mb-4">Sono un piccolo Dughino, se vuoi farmi un regalino&hellip;</p>
+					<h4 class="mb-4">Sono un piccolo Dughino, se vuoi farmi un regalino&hellip;</p>
 
 
 					<a href="https://martino.life/products" class="btn btn-main">Lista regali</a>
 
 
-				</div>
-			</div>
+                                </div>
+                                <div class="block">
+
+
+					<a href="#howtogift" class="btn btn-main">Come fare</a>
+
+
+			       </div>
+                        </div>
 		</div>
 	</div>
 </section>
@@ -105,7 +112,7 @@
 
 
 
-<section class="bg-orange section">
+<section id="howtogift" class="bg-orange section">
   <div class="container">
     <div class="row">
       <div class="col-md-6 text-center mb-5 mb-lg-0">
@@ -114,13 +121,13 @@
       <div class="col-md-6 align-self-center text-center text-md-left">
         <div class="content">
           <h2 class="subheading text-white font-weight-bold mb-10">Come potete farmi un regalo?</h2>
-          <p class="text-white">Tramite un semplice bonifico SEPA. <br> Mamma e papà vivono a Copenaghen; diverse aziende non spediscono all&rsquo;estero; alcuni oggetti ci serviranno in Italia; molti negozi hanno disservizi a causa pandemia&hellip; <br> Questi sono solo alcuni dei motivi che ci hanno spinto a questa soluzione. Basterà effettuare un bonifico, specificando nella causale il regalo scelto. Penseremo noi ad acquistare dove sarà più pratico. Qui sotto troverete i riferimenti bancari.<br> Grazie di cuore a tutti!</p>
-          <p class="text-white"> Intestatario: Filippo Dughetti</p>
+          <h4 class="text-white">Tramite un semplice bonifico SEPA. <br> Mamma e papà vivono a Copenaghen; diverse aziende non spediscono all&rsquo;estero; alcuni oggetti ci serviranno in Italia; molti negozi hanno disservizi a causa pandemia&hellip; <br> Questi sono solo alcuni dei motivi che ci hanno spinto a questa soluzione. Basterà effettuare un bonifico specificando nella causale il regalo scelto, sia esso intero o una quota per uno degli oggetti in lista. <br> Penseremo noi ad acquistare dove sarà più pratico. Qui sotto troverete i riferimenti bancari.<br> Grazie di cuore a tutti!</p>
+          <h4 class="text-white"> Intestatario: Filippo Dughetti</p>
           <meta name="format-detection" content="telephone=no" />
-          <p class="text-white"> IBAN: <text id="iban">DE84 1001 1001 2627 6876 59</text></p> <button onclick="CopyToClipboard('iban')">Copia IBAN</button>
-          <p class="text-white"> BIC/SWIFT: NTSBDEB1XXX</p>
-          <p class="text-white"> Banca: N26</p>
-          <p class="text-white"> Paese: Germania</p>
+          <h4 class="text-white"> IBAN: <text id="iban">DE84 1001 1001 2627 6876 59</text></p> <button onclick="CopyToClipboard('iban')">Copia IBAN</button>
+          <h4 class="text-white"> BIC/SWIFT: NTSBDEB1XXX</p>
+          <h4 class="text-white"> Banca: N26</p>
+          <h4 class="text-white"> Paese: Germania</p>
         </div>
       </div>
     </div>
