--- a/products/passeggino/index.html
+++ b/products/passeggino/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us"><head>
   <meta charset="utf-8">
-  <title>Passeggino Fox 2 Bugaboo</title>
+  <title>Carrozzina e Passeggino Fox 2 Bugaboo</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -29,7 +29,7 @@
   <link rel="icon" href="https://martino.life/images/favicon.png " type="image/x-icon">
 
   
-  <meta property="og:title" content="Passeggino Fox 2 Bugaboo" />
+  <meta property="og:title" content="Carrozzina e Passeggino Fox 2 Bugaboo" />
 <meta property="og:description" content="Ciao, io sono Martino" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://martino.life/products/passeggino/" />
@@ -115,7 +115,7 @@
         </div>
       </div>
       <div class="col-lg-6 col-md-7 offset-lg-1">
-        <h1 class="mb-4">Passeggino Fox 2 Bugaboo</h1>
+        <h1 class="mb-4">Carrozzina e Passeggino Fox 2 Bugaboo</h1>
         
         
         <p class="price py-4">€1100
