finalize gifts list

--- a/products/regalo/index.html
+++ b/products/regalo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us"><head>
   <meta charset="utf-8">
-  <title>Regalo a Vostra Scelta</title>
+  <title>Vostra Scelta</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -29,7 +29,7 @@
   <link rel="icon" href="https://manuelfederica.com/images/favicon.png " type="image/x-icon">
 
   
-  <meta property="og:title" content="Regalo a Vostra Scelta" />
+  <meta property="og:title" content="Vostra Scelta" />
 <meta property="og:description" content="Manuel e Federica" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://manuelfederica.com/products/regalo/" /><meta property="og:image" content="https://manuelfederica.com/images/showcase/REGALO/img_0.png" /><meta property="article:section" content="products" />
@@ -96,7 +96,7 @@
         </div>
       </div>
       <div class="col-lg-6 col-md-7 offset-lg-1">
-        <h1 class="mb-4">Regalo a Vostra Scelta</h1>
+        <h1 class="mb-4">Vostra Scelta</h1>
         
         
         <p class="price py-4">€...
