modify regalo title

--- a/products/index.html
+++ b/products/index.html
@@ -668,14 +668,14 @@
       <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
         <div class="block">
           <div class="gallery-overlay">
-            <a href="https://manuelfederica.com/products/viaggio/" class="gallery-popup">
+            <a href="https://manuelfederica.com/products/regalo/" class="gallery-popup">
               <i class="tf-ion-plus-round"></i>
             </a>
           </div>
-          <img class="img-fluid" src="https://manuelfederica.com/images/showcase/VIAGGIO/img_0.png" alt="Viaggio di Nozze in Islanda">
+          <img class="img-fluid" src="https://manuelfederica.com/images/showcase/REGALO/img_0.png" alt="Un Regalo a Vostra Scelta">
         </div>
         <div class="product-info">
-        <h4 class="mb-2"><a href="https://manuelfederica.com/products/viaggio/" class="link-title">Viaggio di Nozze in Islanda</a></h4>
+        <h4 class="mb-2"><a href="https://manuelfederica.com/products/regalo/" class="link-title">Un Regalo a Vostra Scelta</a></h4>
         <p class="price">€...
           
           </p>
@@ -685,14 +685,14 @@
       <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
         <div class="block">
           <div class="gallery-overlay">
-            <a href="https://manuelfederica.com/products/regalo/" class="gallery-popup">
+            <a href="https://manuelfederica.com/products/viaggio/" class="gallery-popup">
               <i class="tf-ion-plus-round"></i>
             </a>
           </div>
-          <img class="img-fluid" src="https://manuelfederica.com/images/showcase/REGALO/img_0.png" alt="Vostra Scelta">
+          <img class="img-fluid" src="https://manuelfederica.com/images/showcase/VIAGGIO/img_0.png" alt="Viaggio di Nozze in Islanda">
         </div>
         <div class="product-info">
-        <h4 class="mb-2"><a href="https://manuelfederica.com/products/regalo/" class="link-title">Vostra Scelta</a></h4>
+        <h4 class="mb-2"><a href="https://manuelfederica.com/products/viaggio/" class="link-title">Viaggio di Nozze in Islanda</a></h4>
         <p class="price">€...
           
           </p>
